Fix gap between icon and text.

--- a/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-selection-panel.scss
+++ b/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-selection-panel.scss
@@ -237,6 +237,7 @@
 			@media (max-width: $bp-xsmallOnly) {
 				align-items: flex-start;
 				flex-direction: column;
+				gap: 6px;
 			}
 
 			.googlesitekit-audience-creation-error-notice__content {
@@ -270,6 +271,7 @@
 			.googlesitekit-audience-creation-error-notice__actions {
 				@media (max-width: $bp-xsmallOnly) {
 					align-self: flex-end;
+					margin-top: 10px;
 				}
 
 				.mdc-button {
